fixed alignment

--- a/style.css
+++ b/style.css
@@ -3261,7 +3261,7 @@ p {
 
 .service-detail-card img {
     width: 100%;
-    height: 250px;
+    height: 100%;
     object-fit: cover;
 }
 
